# Understanding-Programming-Languages

./: .gitignore  README.md
Assignment/: README.md
Assignment/Week01/: dune  hw1.ml
Assignment/Week02/: hw2.ml
Assignment/Week03/: hw3.ml  hw3_test.ml
Assignment/Week04/: hw4.ml
Assignment/Week05/: hw5.ml
Assignment/Week06/: dune  hw6.ml  hw6_test.ml
Assignment/Week07/: dune  hw7.ml  store.ml
Assignment/Week09/: dune  fstore.ml  hw9.ml  hw9_test.ml  store.ml
Assignment/Week10/: dune  hw10.ml  hw10_test.ml  hw7.ml  hw7_test.ml  store.ml
Assignment/Week11/: dune  hw11.ml  hw11_test.ml  store.ml
Assignment/Week12/: dune  hw12.ml  hw12_test.ml  store.ml
Assignment/Week13/: dune  hw13.ml  hw13_test.ml  store.ml  value.ml
Assignment/Week13/parser/: ast.ml  lexer.mll  parser.mly
Assignment/Week14/: addrManager.ml  dune  env.ml  fstore.ml  hw14.ml  hw14_test.ml  memory.ml  value.ml
Assignment/Week14/parser/: ast.ml  lexer.mll  parser.mly
Lecture/Week01/: func.ml
Lecture/Week02/: dune  list.ml
Lecture/Week07/: dune  shadowing.ml
Practice/Week03/: pr3.ml
Practice/Week04/: pr4.ml
UPL_Week01/: README.md
UPL_Week01/Lecture/: dune  gcd.ml  selectEven.ml
UPL_Week01/Practice/: dune
UPL_Week01/hw1/: hw1.ml  hw1_test.ml
UPL_Week02/: README.md
UPL_Week02/Lecture/: lecture_test.ml
UPL_Week02/hw2/: dune
UPL_Week03/: README.md
UPL_Week04/: README.md
UPL_Week04/hw4/: hw4.ml  hw4_test.ml
UPL_Week05/hw5/: dune  hw5.ml  hw5_test.ml
UPL_Week06/hw6/: hw6.ml
Week01/Practice/: dune  foo.ml  foo_test.ml  helloworld.ml
Week02/hw2/: hw2_test.ml
Week03/Practice/: dune  pr3.ml
Week03/hw3/: dune  hw3.ml
Week04/Practice/: dune  pr4.ml
Week04/hw4/: dune  hw4.ml  hw4_test.ml
