(include_subdirs unqualified)


(library 
 (name ast)
 (modules ast))

(library
 (name parserMain)
 (modules parserMain parser lexer)
 (libraries ast))



(library 
 (name store)
 (modules store)
 (libraries ast))

(library
 (name hw10)
 (modules hw10)
 (libraries store ast))

(library
 (name hw10_test)
 (modules hw10_test)
 (libraries hw10 parserMain)
 (inline_tests)
 (preprocess (pps ppx_inline_test)))