(include_subdirs unqualified)


(library 
 (name ast)
 (modules ast))

(library
 (name parserMain)
 (modules parserMain parser lexer)
 (libraries ast))



(library 
 (name store)
 (modules store)
 (libraries ast))

(library
 (name hw11)
 (modules hw11)
 (libraries store ast))

(library
 (name hw11_test)
 (modules hw11_test)
 (libraries hw11 parserMain)
 (inline_tests)
 (preprocess (pps ppx_inline_test)))