(include_subdirs unqualified)


(library 
 (name ast)
 (modules ast))

(library
 (name parserMain)
 (modules parserMain parser lexer)
 (libraries ast))



(library 
 (name store)
 (modules store)
 (libraries ast))

(library
 (name hw12)
 (modules hw12)
 (libraries store ast))

(library
 (name hw12_test)
 (modules hw12_test)
 (libraries hw12 parserMain)
 (inline_tests)
 (preprocess (pps ppx_inline_test)))