(include_subdirs unqualified)


(library 
 (name ast)
 (modules ast))

(library
 (name parserMain)
 (modules parserMain parser lexer)
 (libraries ast))

(library 
 (name value)
 (modules value))

(library 
 (name store)
 (modules store)
 (libraries ast value))

(library
 (name hw13)
 (modules hw13)
 (libraries store ast))

(library
 (name hw13_test)
 (modules hw13_test)
 (libraries hw13 parserMain)
 (inline_tests)
 (preprocess (pps ppx_inline_test)))