(include_subdirs unqualified)


(library 
 (name ast)
 (modules ast))

(library
 (name parserMain)
 (modules parserMain parser lexer)
 (libraries ast))




(library 
 (name env)
 (modules env))

(library 
 (name addrManager)
 (modules addrManager))


(library 
 (name value)
 (modules value)
 (libraries env))

(library 
 (name memory)
 (modules memory)
 (libraries env value ast))

(library 
 (name fstore)
 (modules fstore)
 (libraries ast))


(library
 (name hw14)
 (modules hw14)
 (libraries fstore ast env memory value addrManager))

(library
 (name hw14_test)
 (modules hw14_test)
 (libraries hw14 parserMain)
 (inline_tests)
 (preprocess (pps ppx_inline_test)))